# pomodoro-app

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc  CLAUDE.md  README.md  package.json
.github/workflows/: ci.yml
.husky/: pre-commit
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: audio.js  idleRemind.js  notification.js  obsidian.js  obsidianSync.js
src/lib/components/: ObsidianSync.svelte  TaskList.svelte
src/lib/stores/: settings.svelte.js  tasks.svelte.js  timer.svelte.js
src/routes/: +page.svelte
src/routes/settings/: +page.svelte
