[package]
name = "tomatask"
version = "0.1.0"
description = "ローカル完結のポモドーロタイマー"
authors = ["ywatase"]
edition = "2021"

[lib]
name = "tomatask_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
